end user show edit

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,38 +1,2 @@
-<h1>Cadastro</h1>
-
-<%= form_for @user do |f| %>
-    <p>
-        <%= f.label :fullname %>
-        <%= f.text_field :fullname %>
-    </p>
-
-    <p>
-        <%= f.label :location %>
-        <%= f.text_field :location %>
-    </p>
-
-
-    <p>
-        <%= f.label :email %>
-        <%= f.text_field :email %>
-    </p>
-
-    <p>
-        <%= f.label :password %>
-        <%= f.text_field :password %>
-    </p>
-
-    <p>
-        <%= f.label :password_confirmation %>
-        <%= f.text_field :password_confirmation %>
-    </p>
-
-    <p>
-        <%= f.label :bio %>
-        <%= f.text_area :bio %>
-    </p>
-
-    <p>
-        <%= f.submit %>
-    </p>
-<%end%>
+<h1>Cadastro de usuário</h1>
+<%= render 'form' %>
