--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,1 @@
-<h1>Colcho.net</h1>
-<p>Escolha as seguintes opções:</p>
-<ul>
-    <li><%= link_to "Cadastro", new_user_path %></li>
-    <li><%= link_to "Visualizar Quartos", rooms_path %></li>
-</ul>
+<h1>Home</h1>
