add helper for validation input and changed form user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <%= render "shared/top" %>
     <div class="container">
-      <%= render "shared/alert/danger" %>
+      <%= render "shared/alert/success" %>
       <%= yield %>
     </div>
   </body>
