--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
-<h1>Cadastro de usuário</h1>
+<h1 class="mt-3 mb-2">New Account</h1>
+<hr>
 <%= render 'form' %>
-<%= link_to "Voltar", root_path %>
+<%= render 'shared/back' %>
