--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -11,22 +11,20 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
+  <div class="row mt-3">
+      <div class="col-8">
+           <%= form.text_field :title, class: 'form-control', placeholder: 'password' %>
+      </div>
+      <div class="col-4">
+          <%= form.text_field :location, class: 'form-control', placeholder: 'password' %>
+      </div>
   </div>
 
-  <div class="field">
-    <%= form.label :location %>
-    <%= form.text_field :location %>
+  <div class="mt-3">
+        <%= form.text_area :description, class: 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  <div class="d-grid gap-2 mt-3">
+      <%= form.submit 'REGISTER', :class => "btn btn-lg btn-success " %>
   </div>
 <% end %>
