--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,37 +1,43 @@
+<%= form_for @user, html: { class: "needs-validation", novalidate: true } do |f| %>
+    <div class="row">
+        <div class="col-8">
+            <%= f.label :fullname, class: "form-label"%>
+            <%= f.text_field :fullname, class: "form-control"%>
+            <%= error_tag @user, :fullname %>
+        </div>
+        
+        <div class="col-4">
+            <%= f.label :location, class: "form-label"%>
+            <%= f.text_field :location, class: "form-control" %>
+            <%= error_tag @user, :location %>
+        </div>
+    </div>
 
-<%= form_for @user do |f| %>
-    <p>
-        <%= f.label :fullname %>
-        <%= f.text_field :fullname %>
-    </p>
+    <div class="row mt-3">
+        <div class="col-6">
+            <%= f.label :email, class: "form-label"%>
+            <%= f.text_field :email, class: "form-control" %>
+            <%= error_tag @user, :email %>
+        </div>
+        <div class="col-3">
+            <%= f.label :password, class: "form-label"%>
+            <%= f.text_field :password, class: "form-control"%>
+            <%= error_tag @user, :password %>
+        </div>
+        <div class="col-3">
+            <%= f.label :password_confirmation, class: "form-label"%>
+            <%= f.text_field :password_confirmation, class: "form-control" %>
+            <%= error_tag @user, :password_confirmation %>
+        </div>
+    </div>
 
-    <p>
-        <%= f.label :location %>
-        <%= f.text_field :location %>
-    </p>
+    <div class="mt-3">
+        <%= f.label :bio, class: "form-label"%>
+        <%= f.text_area :bio, class: 'form-control' %>
+    </div>
 
+    <div class="d-grid gap-2 mt-3">
+        <%= f.submit 'REGISTER', :class => "btn btn-lg btn-success " %>
+    </div>
 
-    <p>
-        <%= f.label :email %>
-        <%= f.text_field :email %>
-    </p>
-
-    <p>
-        <%= f.label :password %>
-        <%= f.text_field :password %>
-    </p>
-
-    <p>
-        <%= f.label :password_confirmation %>
-        <%= f.text_field :password_confirmation %>
-    </p>
-
-    <p>
-        <%= f.label :bio %>
-        <%= f.text_area :bio %>
-    </p>
-
-    <p>
-        <%= f.submit %>
-    </p>
 <%end%>
